[REPEKA-1022] Correct high-contrast mode footer

--- a/src/AdminPanel/src/common/components/redo-footer/redo-footer.scss
+++ b/src/AdminPanel/src/common/components/redo-footer/redo-footer.scss
@@ -122,7 +122,7 @@ redo-footer, .redo-footer {
   }
 }
 
-.high-contrast {
+@at-root .high-contrast {
   .redo-footer {
     .for-regular-colors-mode {
       display: none;
